tests/failing/modulo_eight_bit.dodo
// Expected: Modulo of two 8 bit integers is currently not supported

extern printf;

fn main() {
    let a: u8 = 12;
    let b: u8 = 5;
    printf("%d\n", a % b);
}
